--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>filmlab-app</title>
+    <title>FilmLab</title>
+    <script src="https://kit.fontawesome.com/1ebd227b3a.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
   </head>
   <body>
     <noscript>
