--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
     <title>FilmLab</title>
     <script src="https://kit.fontawesome.com/1ebd227b3a.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.3.5/tiny-slider.css">
+
   </head>
   <body>
     <noscript>
